--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "semantic-ui-react": "^0.64.7"
+    "semantic-ui-react": "^0.64.7",
+    "tracker-component": "^1.3.21"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1"
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {"browsers": ["last 2 versions"]}
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
     }
   }
 }
